# movement

./: CMakeLists.txt  README.md  package.xml
control_motor/: control_motor.ino
launch/: run.launch  run_motor.launch
msg/: SpeedMotor.msg
src/: controlDirectly.cpp  convertVel2SpeedMotor.cpp  keyboard_vel_controller.py
