<?xml version="1.0"?>
<package format="2">
  <name>omni_wheel_ros</name>
  <version>0.0.0</version>
  <description>The omni_wheel_ros package</description>

  <maintainer email="duynamk63uet@gmail.com">Nam BUI DUY</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosserial_arduino</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
